--- a/_posts/2020-12-11- Article 4/mon-article.Rmd
+++ b/_posts/2020-12-11- Article 4/mon-article.Rmd
@@ -1,11 +1,11 @@
 ---
-title: "Article 2"
+title: "mon article"
 description: |
   A short description of the post.
 author:
   - name: Cyril Dupuis
     url: {}
-date: 10-25-2020
+date: 12-11-2020
 output:
   distill::distill_article:
     self_contained: false
